Docs(eHealth): Made alittle doc for question 3

--- a/Question 3/package.json
+++ b/Question 3/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "!"
+    "url": "git+https://github.com/iamraphson/eHealthSystems.git"
   },
   "keywords": [
     "AngularJS",
